<resources>
    <string name="app_name">KafeeCar</string>
    <string name="login">Log-in</string>
    <string name="mensaje_registro">¿No tienes una cuenta?</string>
    <string name="registrate">Registrate</string>
    <string name="correo">Email</string>
    <string name="Contrasenia">Contraseña</string>
    <string name="catalogo">Catálogo</string>
    <string name="citas">Citas</string>
    <string name="Ventas">Ventas</string>
    <string name="estadisticas">Estadísticas</string>
    <string name="matricula_frmt">Matrícula :%s</string>
    <string name="placa_c">Placa</string>
    <string name="matricula_c">Matrícula</string>
    <string name="anio">Año</string>
    <string name="marca_c">Marca</string>
    <string name="modelo_c">Modelo</string>
    <string name="color_c">Color</string>
    <string name="descripcion_c">Descripción</string>
    <string name="inicial_c">Inicial</string>
    <string name="venta_c">Venta</string>
    <string name="promocion_c">Promoción</string>
    <string name="matriculado_c">Matriculado</string>
    <string name="vendedores_c">Vendedores</string>
    <string name="eliminar_c">Eliminar</string>
    <string name="guardar_c">Guardar</string>
    <string name="favoritos_c">Favoritos</string>
    <string name="perfil_c">Perfil</string>
    <string name="cedula_c">Cédula</string>
</resources>