<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_cat"
        android:icon="@drawable/catalogo_icon"
        android:title="@string/catalogo"/>
    <item
        android:id="@+id/nav_citas"
        android:icon="@drawable/cita_icono"
        android:title="@string/citas"/>
    <item
        android:id="@+id/nav_vendedores"
        android:icon="@drawable/vendedores_icono"
        android:title="@string/vendedores_c"/>
    <item
        android:id="@+id/nav_ventas"
        android:icon="@drawable/ventas_icon"
        android:title="@string/Ventas"/>
    <item
        android:id="@+id/nav_admin_perfil"
        android:icon="@drawable/perfil_icono"
        android:title="@string/perfil_c"/>

</menu>