<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/cita_individual_editar"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="80dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ocra"
                        android:text="@string/placa_c"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/an_placa_etxt"
                        style="@style/editar_entradas_txt"
                        android:layout_height="35dp"
                        android:textSize="15sp"
                        tools:text="PBY 786" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ocra"
                        android:text="@string/matricula_c"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/editTextTextPersonName3"
                        style="@style/editar_entradas_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bordesboton"
                        android:ems="10"
                        android:fontFamily="@font/ocra"
                        android:inputType="textPersonName"
                        android:textAlignment="center"
                        tools:text="PBY 786" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ocra"
                        android:text="@string/anio"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/an_anio_etxt"
                        style="@style/editar_entradas_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bordesboton"
                        android:ems="10"
                        android:fontFamily="@font/ocra"
                        android:inputType="textPersonName"
                        android:textAlignment="center"
                        tools:text="PBY 786" />

                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="189dp"
                    android:layout_height="148dp"
                    android:layout_marginTop="15dp"
                    android:background="#00FFFFFF"
                    android:scaleType="fitXY"
                    app:srcCompat="@mipmap/ic_tesla" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ocra"
                android:text="@string/descripcion_c"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/ed_descripcion_etxt"
                style="@style/editar_entradas_txt"
                android:layout_width="match_parent"
                android:layout_height="77dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bordesmarcos"
                android:inputType="text|textImeMultiLine"
                android:lines="3"
                android:maxLines="5"
                android:singleLine="false" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ocra"
                android:text="@string/marca_c"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/editTextTextPersonName6"
                style="@style/editar_entradas_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="PBY 786" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ocra"
                android:text="@string/modelo_c"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/editTextTextPersonName7"
                style="@style/editar_entradas_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="PBY 786" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ocra"
                android:text="@string/color_c"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/editTextTextPersonName9"
                style="@style/editar_entradas_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="PBY 786" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="21dp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:paddingEnd="15dp"
                app:srcCompat="@drawable/precio_titulo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ocra"
                        android:text="@string/inicial_c"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/editTextTextPersonName11"
                        style="@style/editar_entradas_txt"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        tools:text="PBY 786" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ocra"
                        android:text="@string/venta_c"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/editTextTextPersonName10"
                        style="@style/editar_entradas_txt"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        tools:text="PBY 786" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ocra"
                        android:text="@string/promocion_c"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/editTextTextPersonName12"
                        style="@style/editar_entradas_txt"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        tools:text="PBY 786" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/matricula_chkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:button="@drawable/ic_baseline_radio_button"
                    android:buttonTint="@color/botones"
                    android:clickable="true"
                    android:fontFamily="@font/ocra"
                    android:text="@string/matriculado_c"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="120dp"
                    android:layout_height="35dp"
                    android:background="@drawable/boton_redondeado_dark"
                    android:fontFamily="@font/valorant"
                    android:text="@string/eliminar_c"
                    android:textColor="@color/white" />

                <Space
                    android:layout_width="30dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="120dp"
                    android:layout_height="35dp"
                    android:background="@drawable/boton_redondeado"
                    android:fontFamily="@font/valorant"
                    android:text="@string/guardar_c"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>